[package]
name = "rma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
three-d = "0.16.0"
three-d-asset = { version = "0.6.0", features = ["pcd"] }
tokio = { version = "1.32.0", features = ["full"] }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
