[package]
name = "rma"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
three-d = { version = "0.16.0", features = ["egui-gui"] }
three-d-asset = { version = "0.6.0", features = ["reqwest"] }
unreal_asset.workspace = true
rma_lib = { path = "../rma_lib" }
anyhow.workspace = true
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
