[package]
name = "rma"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
three-d = { version = "0.17.0", features = ["egui-gui"] }
three-d-asset = { version = "0.7.0", features = ["reqwest"] }
unreal_asset.workspace = true
rma_lib = { path = "../rma_lib" }
anyhow.workspace = true
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
egui_extras = "0.26.2"
log = "0.4"
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
